--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			    <div class="jumbotron">
 				    <h2 id="game-title">Mythos</h2>
 				    <hr class="header-underline">			    
-				    <p class="play-button"><a class="btn btn-primary btn-lg" href="#" role="button">Play</a></p>
+				    <p class="play-button"><a class="btn btn-primary btn-lg" href="gamepage.html" role="button">Play</a></p>
 			    </div>
 			  </div>
 			</div>
