Remove whitespace from html markup

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
 			    <div class="jumbotron">
 				    <h2 id="game-title">Mythos</h2>
 				    <hr class="header-underline">			    
-				    <p class="play-button"><a class="btn btn-primary btn-lg" href="gamepage.html" role="button">Play</a></p>
+				    <p class="play-button"><a class="btn btn-primary btn-lg" href="gamepage.html" role="button">Start</a></p>
 			    </div>
 			  </div>
 			</div>
 		</div>
 	</div>
-
-
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
