--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row">
+		<div class="landing-page row">
 			<div class="landing-page background">
 			  <div class="image-overlay">
 			    <div class="jumbotron">
