remove classes for all p's that encapsulate a button and replace with 'button-container' class to facilitae css cleanup

--- a/gamepage.html
+++ b/gamepage.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="gamepage container-fluid">
-	<!-- navbar -->
+<!-- navbar -->
 		<div class="row">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
@@ -22,7 +22,7 @@
 			</nav>
 		</div>
 <!-- story carousel -->
-		<div class="story-carousel row">
+		<div class="main-story-carousel row">
 			<div class="col-xs-12">
 				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
 			<!-- Indicators -->
@@ -32,19 +32,22 @@
 					</ol>
 			<!-- Wrapper for slides -->
 					<div class="main-story-carousel carousel-inner" role="listbox">
-						<div class="item active first story-slide">
-							<div class="carousel-caption">
-							It is a period of civil unrest and bloodshed. Several kingdoms fight a civil war over which kingdom should rule the realm. Your kingdom, MYTHOS, has been infiltrated by spies from the other kingdoms. Unable to trust the aid of the royal court, your King is succumbing to the hardships of war.
+						<div class="item active story-slide">
+							<div class="carousel-image-overlay">
+								<div class="carousel-caption">
+								It is a period of civil unrest and bloodshed. Several kingdoms fight a civil war over which kingdom should rule the realm. Your kingdom, MYTHOS, has been infiltrated by spies from the other kingdoms. Unable to trust the aid of the royal court, your King is succumbing to the hardships of war.
+								</div>
 							</div>
 						</div>
-						<div class="item second story-slide">
-							<div class="carousel-caption">
-							After several unsuccessful assassination attempts to the royal family, your King approaches you to undertake a dangerous quest. The King wants you to oversee and protect his only heir, as he is transported to a safer outpost, far from the reaches of the warring states.
-							<p class="start-button"><a class="btn btn-primary btn-lg start-game" role="button">Start</a></p>
+						<div class="item story-slide">
+							<div class="carousel-image-overlay">
+								<div class="carousel-caption">
+								After several unsuccessful assassination attempts to the royal family, your King approaches you to undertake a dangerous quest. The King wants you to oversee and protect his only heir, as he is transported to a safer outpost, far from the reaches of the warring states.
+								<p class="button-container"><a class="btn btn-primary btn-lg start-game" role="button">Start</a></p>
+								</div>
 							</div>
 						</div>
 					</div>
-
 				<!-- Controls -->
 					<a class="main-story-carousel right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
 						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
@@ -57,7 +60,7 @@
 		<div class="hero-selection row">
 			<div class="hero-selection-well col-xs-12">
 				<div class="selection-well well">
-					<p class="selection-text">Please select a HERO from the following character selection panel below. Choose carefully, who knows what opposition you may encounter on this journey.</p>
+					<p class="selection-text">Please select a <span class="highlighted-text">HERO</span> from the following character selection panel below. Choose carefully, who knows what opposition you may encounter on this journey.</p>
 				</div>
 			</div>
 			<div class="col-xs-12">
@@ -116,12 +119,8 @@
 				<div class="selection-well well">
 					<h3 class="selection-header">Route to Safe Outpost</h3>
 					<p class="selection-text">You have chosen to travel through the <span class="selected-level"></span>. As you prepare to leave for your quest, a PALADIN informs you that your King has been killed. Rumor has it that an unspeakable beast has been sent to kill the heir. Be weary, stay sharp. Who knows lies in the road ahead.</p>
+					<p class="button-container"><a class="btn btn-primary btn-lg start-quest" role="button">Start Quest</a></p>
 				</div>
-			</div>
-			<div class="col-xs-12">
-				<h4 class="panel-title">
-					<p class="start-quest-button"><a class="btn btn-primary btn-lg start-game" role="button">Start Quest</a></p>
-				</h4>
 			</div>
 		</div><!-- End of Quest-Start row -->
 <!-- Combat row -->
@@ -151,7 +150,7 @@
 								<div class="item third combat-slide">
 									<div class="combat carousel-caption">
 									As, you make your way over to your fallen ally when you hear a loud roar exclaim, "This must be the heir to the throne of MYTHOS!" You see a <span class="randomized-villain"></span> emerge from the wreckage. As it draws near, it growls out, "I have come for you, BOY! Your time has come!"
-									<p><a class="btn btn-primary btn-lg stage-prep-button" role="button">Continue</a></p>
+									<p class="button-container"><a class="btn btn-primary btn-lg stage-prep" role="button">Continue</a></p>
 									</div>
 								</div>
 							</div>
@@ -168,7 +167,7 @@
 					<div class="stage-relative col-xs-12">						
 						<div id="#stage">
 							<h4 class="panel-title">
-								<p class="start-fight-button"><a class="btn btn-danger btn-lg start-fight" role="button">Defend the Heir</a></p>
+								<p class="button-container"><a class="btn btn-danger btn-lg start-fight" role="button">Defend the Heir</a></p>
 							</h4>
 						</div>
 	<!-- User-Selected Character combat-card -->
@@ -199,9 +198,6 @@
 				</div> 
 			</div><!-- End of col=xs-12 -->
 		</div><!-- end of post-fight-section row -->
-
-
-
 	</div><!-- End of gamepage container-fluid -->
 
 
