--- a/gamepage.html
+++ b/gamepage.html
@@ -24,32 +24,32 @@
 <!-- story carousel -->
 		<div class="main-story-carousel row">
 			<div class="col-xs-12">
-				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
+				<div id="story-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 			<!-- Indicators -->
 					<ol class="carousel-indicators">
-						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						<li data-target="#story-carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#story-carousel" data-slide-to="1"></li>
 					</ol>
 			<!-- Wrapper for slides -->
 					<div class="main-story-carousel carousel-inner" role="listbox">
-						<div class="item active story-slide">
+						<div class="item active main-story-slide">
 							<div class="carousel-image-overlay">
 								<div class="carousel-caption">
-								It is a period of civil unrest and bloodshed. Several kingdoms fight a civil war over which kingdom should rule the realm. Your kingdom, MYTHOS, has been infiltrated by spies from the other kingdoms. Unable to trust the aid of the royal court, your King is succumbing to the hardships of war.
+								It is a period of civil unrest and bloodshed. Several kingdoms fight a civil war over which kingdom should rule the realm. Your kingdom, <span class="highlighted-text">MYTHOS</span>, has been infiltrated by spies from the other kingdoms. Unable to trust the aid of the royal court, your King is succumbing to the hardships of war.
 								</div>
 							</div>
 						</div>
-						<div class="item story-slide">
+						<div class="item main-story-slide">
 							<div class="carousel-image-overlay">
 								<div class="carousel-caption">
-								After several unsuccessful assassination attempts to the royal family, your King approaches you to undertake a dangerous quest. The King wants you to oversee and protect his only heir, as he is transported to a safer outpost, far from the reaches of the warring states.
-								<p class="button-container"><a class="btn btn-primary btn-lg start-game" role="button">Start</a></p>
+								After several unsuccessful assassination attempts to the royal family, your King approaches you to undertake a dangerous <span class="highlighted-text">Quest</span>. The King wants you to oversee and protect his only heir, as he is transported to a safer outpost, far from the reaches of the warring states.
+								<p class="button-container"><a class="btn btn-primary btn-lg start-game" role="button">Continue</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
 				<!-- Controls -->
-					<a class="main-story-carousel right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+					<a class="main-story-carousel right carousel-control" href="#story-carousel" role="button" data-slide="next">
 						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 						<span class="sr-only">Next</span>
 					</a>
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12">
-				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+				<div class="panel-group hero-panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 			<!-- Panel 1 -->
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingOne">
@@ -90,7 +90,7 @@
 			<div class="level-selection-well col-xs-12">
 				<div class="selection-well well">
 					<h3 class="selection-header">It's all up to you</h3>
-					<p class="selection-text">You have selected the <span class="selected-hero"></span>. None of the scouts that you have sent out have reported back. It is up to you to select the route you wish to take to the SAFE OUTPOST.</p>
+					<p class="selection-text">You have selected the <span class="selected-hero highlighted-text"></span>. None of the scouts that you have sent out have reported back. It is up to you to select the route you wish to take to the SAFE OUTPOST.</p>
 				</div>
 			</div>
 			<div class="col-xs-12">
@@ -118,7 +118,7 @@
 			<div class="col-xs-12">
 				<div class="selection-well well">
 					<h3 class="selection-header">Route to Safe Outpost</h3>
-					<p class="selection-text">You have chosen to travel through the <span class="selected-level"></span>. As you prepare to leave for your quest, a PALADIN informs you that your King has been killed. Rumor has it that an unspeakable beast has been sent to kill the heir. Be weary, stay sharp. Who knows lies in the road ahead.</p>
+					<p class="selection-text">You have chosen to travel through the <span class="selected-level highlighted-text"></span>. As you prepare to leave for your quest, an informant informs you that your King has been killed. Rumor has it that an unspeakable beast has been sent to kill the heir. Be weary, stay sharp. Who knows lies in the road ahead.</p>
 					<p class="button-container"><a class="btn btn-primary btn-lg start-quest" role="button">Start Quest</a></p>
 				</div>
 			</div>
@@ -137,19 +137,19 @@
 							</ol>
 					<!-- Wrapper for slides -->
 							<div class="combat-story-carousel carousel-inner" role="listbox">
-								<div class="item active first combat-slide">
+								<div class="item active combat-story-slide">
 									<div class="combat carousel-caption">
-									As you start on your quest to protect and deliver the king's son, you begin to notice that the <span class="selected-level"></span> is riddled with fresh corpses, a clear sign that a large, recent battle had taken place here. You take a second to observe the carnage and realize how eerily quiet it is.
+									As you start on your quest to protect and deliver the king's son, you begin to notice that the <span class="selected-level highlighted-text"></span> is riddled with fresh corpses, a clear sign that a large, recent battle had taken place here. You take a second to observe the carnage and realize how eerily quiet it is.
 									</div>
 								</div>
-								<div class="item second combat-slide">
+								<div class="item combat-story-slide">
 									<div class="combat carousel-caption">
-									Among the fallen, you spot one of your scouts that you sent out to seek the safest route to the OUTPOST. It is clear to you why the scout never made it back. 									
+									Among the fallen, you spot one of your scouts that you sent out to seek the safest route to the <span class="highlighted-text">Outpost</span>. It is clear to you why the scout never made it back. 									
 									</div>
 								</div>
-								<div class="item third combat-slide">
+								<div class="item combat-story-slide">
 									<div class="combat carousel-caption">
-									As, you make your way over to your fallen ally when you hear a loud roar exclaim, "This must be the heir to the throne of MYTHOS!" You see a <span class="randomized-villain"></span> emerge from the wreckage. As it draws near, it growls out, "I have come for you, BOY! Your time has come!"
+									As, you make your way over to your fallen ally when you hear a loud roar exclaim, "This must be the heir to the throne of MYTHOS!" You see a <span class="randomized-villain highlighted-text"></span> emerge from the wreckage. As it draws near, it growls out, "I have come for you, BOY! Your time has come!"
 									<p class="button-container"><a class="btn btn-primary btn-lg stage-prep" role="button">Continue</a></p>
 									</div>
 								</div>
@@ -162,7 +162,7 @@
 						</div>
 					</div>
 				</div><!-- End of combat-story-carousel -->
-	<!-- Combat center-stage -->
+	<!-- Combat stage-relative -->
 				<div class="row">
 					<div class="stage-relative col-xs-12">						
 						<div id="#stage">
@@ -170,7 +170,7 @@
 								<p class="button-container"><a class="btn btn-danger btn-lg start-fight" role="button">Defend the Heir</a></p>
 							</h4>
 						</div>
-	<!-- User-Selected Character combat-card -->
+	<!-- Hero combat-card -->
 			    		<div id="hero-character" class="hero combat-card"></div>
 	<!-- Randomized Villain combat-card -->
 			    		<div id="randomized-character" class="villain combat-card"></div>
@@ -185,14 +185,14 @@
 		<!-- victory-section -->
 				<div class="victory section">
 					<div class="victory textbox-container">
-						<div class="victory textbox prompt">After a vicious duel with the <span class="randomized-villain"></span>, you have been victorious! You WIN! want to play again?</div>
+						<div class="victory">After a vicious duel with the <span class="randomized-villain red-highlighted-text"></span>, you have been victorious! You WIN! want to play again?</div>
 						<div class="restart button">Play Again</div>
 					</div>
 				</div>
 		<!-- defeat-section -->
 				<div class="defeat section">
 					<div class="defeat textbox-container">
-						<div class="defeat textbox prompt">After a vicious duel with the <span class="randomized-villain"></span>, you have been defeated! You LOST! want to play again?</div>
+						<div class="defeat">After a vicious duel with the <span class="randomized-villain red-highlighted-text"></span>, you have been defeated! You LOST! want to play again?</div>
 						<div class="restart button">Try Again</div>
 					</div>
 				</div> 
